# project-based-ffmpeg

./: CMakeLists.txt  Transcode.cpp  readme.md
include/: AudioDecoder.h  AudioEncoder.h  AudioFilter.h  Demux.h  Muxer.h  RingBuffer.h  VideoDecoder.h  VideoEncoder.h  VideoFilter.h  queue.h
src/: AudioDecoder.cpp  AudioEncoder.cpp  AudioFilter.cpp  Demux.cpp  Muxer.cpp  VideoDecoder.cpp  VideoEncoder.cpp  VideoFilter.cpp
